--- a/git_main.html
+++ b/git_main.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div class="container-fluid ">    
+    <!-- Header--><div class="container-fluid ">    
         <div class="row">
             <div class="col-6"><img src="header_main_img.png" class="img-fluid"></div>
             <div class="col-6">
@@ -44,6 +44,5 @@
         </div>
     </div>
 
-    
 </body>
 </html>
