--- a/git_main.html
+++ b/git_main.html
@@ -72,6 +72,39 @@
 
 </nav>
 
+<!--Carousel-->
+<div id="carousel_1" class="carousel slide" data-bs-ride="carousel">
+
+    <!-- Indicators/dots 
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carousel_1" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#carousel_1" data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="#carousel_1" data-bs-slide-to="2"></button>
+    </div>  -->
+    
+    <!-- The slideshow/carousel -->
+    <div class="carousel-inner">
+      <div class="carousel-item active"><img src="carousel_img_1.jpg" alt="Carousel img 1" class="d-block" style="width:100%"></div>
+      <div class="carousel-item"><img src="carousel_img_2.jpg" alt="Carousel img 2" class="d-block" style="width:100%"></div>
+      <div class="carousel-item"><img src="carousel_img_3.jpg" alt="Carousel img 3" class="d-block" style="width:100%"></div>
+      <div class="carousel-item"><img src="carousel_img_4.jpg" class="d-block" style="width:100%"></div>
+      <div class="carousel-item"><img src="carousel_img_5.jpg" class="d-block" style="width:100%"></div>
+      <div class="carousel-item"><img src="carousel_img_6.jpg" class="d-block" style="width:100%"></div>
+      <div class="carousel-item"><img src="carousel_img_7.jpg" class="d-block" style="width:100%"></div>
+      <div class="carousel-item"><img src="carousel_img_8.jpg" class="d-block" style="width:100%"></div>
+      <div class="carousel-item"><img src="carousel_img_9.jpg" class="d-block" style="width:100%"></div>
+      <div class="carousel-item"><img src="carousel_img_10.jpg" class="d-block" style="width:100%"></div>
+      <div class="carousel-item"><img src="carousel_img_11.jpg" class="d-block" style="width:100%"></div>
+    </div>
+    
+    <!-- Left and right controls/icons -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carousel_1" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carousel_1" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
 
 </body>
 </html>
