Added "Forthcoming Events" and "News" as tables

--- a/git_main.html
+++ b/git_main.html
@@ -98,5 +98,31 @@
     </button>
   </div>
 
+<!--Forthcoming Events and News-->
+<div class="row p-5">
+    <div class="col-md-6">
+        Forthcoming Events
+        <table class="table table-bordered" >     
+            <tr><td><a href="#"> MeitY Sponsored Seminar on Challenges in Deep Submicron CMOS Technology on 06.01.2022 </a></td></tr>
+            <tr><td><a href="#">Workshop on Simulation and Emulation of Self Organized Networks (SEASON -2023) (Theme: Wireless Networking) from 17.02.2023 to 18.02.2023. </a></td></tr>
+        </table>
+    </div>
+
+    <div class="col-md-6">
+        News
+        <table class="table table-bordered">
+                <tr ><td><a href="#">34th Graduation Day at Kongu Engineering College</a></td></tr>
+                <tr ><td><a href="#">COE on Industrial IOT - 28.10.2022</a></td></tr>
+                <tr ><td><a href="#">KEC - First Year Inaugural function</a></td></tr>
+                <tr ><td><a href="#">KEC Bagged First Prize in Wildlife Week Competitions</a></td></tr>
+                <tr ><td><a href="#">Kongu Engineering College Signed MoU with Taylors University Malaysia</a></td></tr>
+                <tr ><td><a href="#">Kongu Engineering College, Perundurai won cash prize of Rs.1 lakh in SIH2022</a></td></tr>
+                <tr ><td><a href="#">Smart India Hackathon 2022 Grand Finale at Kongu Engineering College</a></td></tr>
+                <tr ><td><a href="#">Startup Mania English Press Release 07.10.2022</a></td></tr>
+                <tr ><td><a href="#">Enthusia2k22</a></td></tr>
+        </table>
+    </div>
+</div>
+
 </body>
 </html>
