Added imgs like placements, ranking, awards, etc..

--- a/git_main.html
+++ b/git_main.html
@@ -124,5 +124,21 @@
     </div>
 </div>
 
+<div class="row p-5">
+	<div class="col-md-12 bg-light border border-danger">
+		<div><a href="#"> International Year of Millets (IYoM)-2023</a></div>
+	</div>
+</div>
+
+<div class="row ps-5">
+	<div class="col-md-2"><img src="img_1.png"  width="150" height="120"></div>
+	<div class="col-md-2"><img src="img_2.png"  width="150" height="120"></div>
+	<div class="col-md-2"><img src="img_3.png"  width="150" height="120"></div>
+	<div class="col-md-2"><img src="img_4.png"  width="150" height="120"></div>
+	<div class="col-md-2"><img src="img_5.png"  width="150" height="120"></div>
+	<div class="col-md-2"><img src="img_6.png"  width="150" height="120"></div>
+	
+</div>
+
 </body>
 </html>
