Completed the webpage designing.

--- a/git_main.html
+++ b/git_main.html
@@ -27,18 +27,6 @@
                 <li class="nav-item">
                 <a class="nav-link " href="https://kongu.irins.org/">FACULTY PROFILE</a>
                 </li>
-        <!--        <li class="nav-item">
-                    <a class="nav-link  " href="https://www.facebook.com/konguengineeringcollegeperundurai"  class="nav-link  " target="_blank"> <i class="fa fa-facebook-official" style="font-size:28px;color:#326ada" ></i>  </a>
-                </li>
-                <li class="nav-item">
-                        <a class="nav-link  " href="https://www.instagram.com/konguengineeringcollege/" target="_blank"> <i class="fa fa-instagram" style="font-size:28px;color:red" ></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link  " href="https://twitter.com/KonguOfficial" target="_blank"><i class="fa fa-twitter" style="font-size:28px;color:#326ada"></i> </a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link  " href="https://www.youtube.com/c/konguengineeringcollege" target="_blank"> <i class="fa fa-youtube" style="font-size:28px;color:red" ></i> </a>
-                </li>-->
                 </ul>
             </div>
         </div>
@@ -139,6 +127,106 @@
 	<div class="col-md-2"><img src="img_6.png"  width="150" height="120"></div>
 	
 </div>
+
+<!--Quick Links-->
+<div class="row" style="padding:5px;background-color:#16336d; color:white;font-size: 13px;">
+    <div class="col-md-5" >
+		Quick Links
+		<ul>
+			<li><a href="#">NIRF</a></li>
+			<li><a href="#">Atal Ranking of Institutions on Innovation Achievements (ARIIA) - 2020-21  </a></li>
+			<li><a href="#">ARIIA Reports</a></li>
+			<li><a href="#">Mandatory Disclosure</a></li>
+			<li><a href="#">Organization Structure </a></li>
+			<li><a href="#">Strategic Plan</a> </li>
+			<li><a href="#">Patents </a></li>
+			<li><a href="#">Student Centric Activities</a></li>
+			<li><a href="#">Kongu CRS </a></li>
+			<li><a href="#">KEC Web Album </a></li>
+			<li><a href="#">Code of Conduct Handbook</a></li>
+			<li><a href="#">Service Rules & HR Policy</a></li>
+			<li><a href="#">Supporting Staff</a></li>
+			<li><a href="#">Student Details</a></li>
+			<li><a href="#">Audit Report</a></li>
+			<li><a href="#">Undertaking</a></li> 
+			<li><a href="#">Best Practices</a></li>
+			<li><a href="#">Fitness Protocols and Guidelines</a></li>
+		</ul>
+    </div>
+	<div class="col-md-4" style="padding: 2px;">
+          Students  Corner
+      <ul>
+		<li><a href="#">Vidya Lakshmi Portal for Students</a></li>
+        <li><a href="#">PM Special Scholarship Scheme for J&K Students </a></li>
+		<li><a href="#">Institute Industry Cell </a></li>
+        <li><a href="#">Gender Equity Club</a> </li>
+	    <li><a href="#">Library Committee</a></li>
+        <li><a href="#">Research Committee </a></li>
+        <li><a href="#">Antiragging Committee </a></li>
+        <li><a href="#">Antiragging Squad </a></li>
+        <li><a href="#">Internal Complaint Committee / Anti-Sexual Harassment Cell </a></li>
+        <li><a href="#">Prohibition of Alcoholism</a></li>
+        <li><a href="#">Students Counselors </a></li>
+        <li><a href="#">Disciplinary Committee  </a></li>
+        <li><a href="#">Women Development Cell </a></li>
+        <li><a href="#">Grievance Redressal Committee</a></li>
+        <li><a href="#">Grievance Redressal and Empowerment Committee for SC/ST Students</a></li>
+		<li><a href="#">AICTE-CSS  </a></li>
+        <li><a href="#">Excess Fee Committee  </a></li>
+		<li><a href="#">Grievance Portal</a></li>
+        <li><a href="#">Feedback</a></li>
+       </ul>
+    </div>
+	<div class="col-md-3" style="padding:2px;">
+        <div>
+		Quick Links
+            <ul>
+                <li><a href="#">NAAC</a></li>
+				<li><a href="#">IQAC</a></li>
+				<li><a href="#">RTI</a></li>
+				<li><a href="#">Self Declaration</a></li>
+				<li><a href="#">Certificate Genuineness Verification</a></li>
+				<li><a href="#">Full Time PhD</a></li>
+            </ul>
+                <p align="center" >
+                    <a  href="#"><img src="img_tbi.jpg" width="100" height="50" alt="TBI@KEC image" ></a>
+                    <a href="#"><img src="img_fit_india.jpg" width="110" height="50"  alt="FIT India image"> </a>
+				</p>
+                
+                <h6 style="text-align: center; color:yellow; ">For Admission Enquiry Contact </h6>
+                <p style="text-align: center" >
+                    Mobile: 9965277765 / 9443020583 </br>
+                    Land Line: 04294-226515 / 04294-226517</br>
+				</p>
+                <p align="center">
+					You are visitor Number: 10106155</p>
+        </div>
+
+      </div>
+</div>
+
+<!--Footer Notes-->
+<div class="row" style="padding: 5px;padding-bottom:0px;  text-align: center;">
+    <div class="col-md-12 bg-light" >
+		<p align="center">Follow us @
+			<a href"#">Facbook</a>
+			<a href"#">Twitter</a>
+		</p>
+    </div>
+</div>
+<hr>
+<!--Another Footer Notes-->
+<footer>
+        <div class="row">
+            <div class="col">
+                <p style="text-align: center;">Designed and Maintained by <a href="#" class="text-dark" style="text-decoration: none;;">
+				KEC - ERP Cell</a></p>
+            </div>
+          
+        </div>
+  </footer>
+
+
 
 </body>
 </html>
