Made the text in quick links as white colour

--- a/git_main.html
+++ b/git_main.html
@@ -129,64 +129,64 @@
 </div>
 
 <!--Quick Links-->
-<div class="row" style="padding:5px;background-color:#16336d; color:white;font-size: 13px;">
+<div class="row text-light" style="padding:5px;background-color:#16336d; color:white;font-size: 13px;">
     <div class="col-md-5" >
-		Quick Links
+		<h6> Quick Links </h6>
 		<ul>
-			<li><a href="#">NIRF</a></li>
-			<li><a href="#">Atal Ranking of Institutions on Innovation Achievements (ARIIA) - 2020-21  </a></li>
-			<li><a href="#">ARIIA Reports</a></li>
-			<li><a href="#">Mandatory Disclosure</a></li>
-			<li><a href="#">Organization Structure </a></li>
-			<li><a href="#">Strategic Plan</a> </li>
-			<li><a href="#">Patents </a></li>
-			<li><a href="#">Student Centric Activities</a></li>
-			<li><a href="#">Kongu CRS </a></li>
-			<li><a href="#">KEC Web Album </a></li>
-			<li><a href="#">Code of Conduct Handbook</a></li>
-			<li><a href="#">Service Rules & HR Policy</a></li>
-			<li><a href="#">Supporting Staff</a></li>
-			<li><a href="#">Student Details</a></li>
-			<li><a href="#">Audit Report</a></li>
-			<li><a href="#">Undertaking</a></li> 
-			<li><a href="#">Best Practices</a></li>
-			<li><a href="#">Fitness Protocols and Guidelines</a></li>
+			<li><a class="text-light" href="#">NIRF</a></li>
+			<li><a class="text-light" href="#">Atal Ranking of Institutions on Innovation Achievements (ARIIA) - 2020-21  </a></li>
+			<li><a class="text-light" href="#">ARIIA Reports</a></li>
+			<li><a class="text-light" href="#">Mandatory Disclosure</a></li>
+			<li><a class="text-light" href="#">Organization Structure </a></li>
+			<li><a class="text-light" href="#">Strategic Plan</a> </li>
+			<li><a class="text-light" href="#">Patents </a></li>
+			<li><a class="text-light" href="#">Student Centric Activities</a></li>
+			<li><a class="text-light" href="#">Kongu CRS </a></li>
+			<li><a class="text-light" href="#">KEC Web Album </a></li>
+			<li><a class="text-light" href="#">Code of Conduct Handbook</a></li>
+			<li><a class="text-light" href="#">Service Rules & HR Policy</a></li>
+			<li><a class="text-light" href="#">Supporting Staff</a></li>
+			<li><a class="text-light" href="#">Student Details</a></li>
+			<li><a class="text-light" href="#">Audit Report</a></li>
+			<li><a class="text-light" href="#">Undertaking</a></li> 
+			<li><a class="text-light" href="#">Best Practices</a></li>
+			<li><a class="text-light" href="#">Fitness Protocols and Guidelines</a></li>
 		</ul>
     </div>
 	<div class="col-md-4" style="padding: 2px;">
-          Students  Corner
+          <h6> Students  Corner </h6>
       <ul>
-		<li><a href="#">Vidya Lakshmi Portal for Students</a></li>
-        <li><a href="#">PM Special Scholarship Scheme for J&K Students </a></li>
-		<li><a href="#">Institute Industry Cell </a></li>
-        <li><a href="#">Gender Equity Club</a> </li>
-	    <li><a href="#">Library Committee</a></li>
-        <li><a href="#">Research Committee </a></li>
-        <li><a href="#">Antiragging Committee </a></li>
-        <li><a href="#">Antiragging Squad </a></li>
-        <li><a href="#">Internal Complaint Committee / Anti-Sexual Harassment Cell </a></li>
-        <li><a href="#">Prohibition of Alcoholism</a></li>
-        <li><a href="#">Students Counselors </a></li>
-        <li><a href="#">Disciplinary Committee  </a></li>
-        <li><a href="#">Women Development Cell </a></li>
-        <li><a href="#">Grievance Redressal Committee</a></li>
-        <li><a href="#">Grievance Redressal and Empowerment Committee for SC/ST Students</a></li>
-		<li><a href="#">AICTE-CSS  </a></li>
-        <li><a href="#">Excess Fee Committee  </a></li>
-		<li><a href="#">Grievance Portal</a></li>
-        <li><a href="#">Feedback</a></li>
+		<li><a class="text-light" href="#">Vidya Lakshmi Portal for Students</a></li>
+        <li><a class="text-light" href="#">PM Special Scholarship Scheme for J&K Students </a></li>
+		<li><a class="text-light" href="#">Institute Industry Cell </a></li>
+        <li><a class="text-light" href="#">Gender Equity Club</a> </li>
+	    <li><a class="text-light" href="#">Library Committee</a></li>
+        <li><a class="text-light" href="#">Research Committee </a></li>
+        <li><a class="text-light" href="#">Antiragging Committee </a></li>
+        <li><a class="text-light" href="#">Antiragging Squad </a></li>
+        <li><a class="text-light" href="#">Internal Complaint Committee / Anti-Sexual Harassment Cell </a></li>
+        <li><a class="text-light" href="#">Prohibition of Alcoholism</a></li>
+        <li><a class="text-light" href="#">Students Counselors </a></li>
+        <li><a class="text-light" href="#">Disciplinary Committee  </a></li>
+        <li><a class="text-light" href="#">Women Development Cell </a></li>
+        <li><a class="text-light" href="#">Grievance Redressal Committee</a></li>
+        <li><a class="text-light" href="#">Grievance Redressal and Empowerment Committee for SC/ST Students</a></li>
+		<li><a class="text-light" href="#">AICTE-CSS  </a></li>
+        <li><a class="text-light" href="#">Excess Fee Committee  </a></li>
+		<li><a class="text-light" href="#">Grievance Portal</a></li>
+        <li><a class="text-light" href="#">Feedback</a></li>
        </ul>
     </div>
 	<div class="col-md-3" style="padding:2px;">
         <div>
-		Quick Links
+		<h6>Quick Links</h6>
             <ul>
-                <li><a href="#">NAAC</a></li>
-				<li><a href="#">IQAC</a></li>
-				<li><a href="#">RTI</a></li>
-				<li><a href="#">Self Declaration</a></li>
-				<li><a href="#">Certificate Genuineness Verification</a></li>
-				<li><a href="#">Full Time PhD</a></li>
+                <li><a class="text-light" href="#">NAAC</a></li>
+				<li><a class="text-light" href="#">IQAC</a></li>
+				<li><a class="text-light" href="#">RTI</a></li>
+				<li><a class="text-light" href="#">Self Declaration</a></li>
+				<li><a class="text-light" href="#">Certificate Genuineness Verification</a></li>
+				<li><a class="text-light" href="#">Full Time PhD</a></li>
             </ul>
                 <p align="center" >
                     <a  href="#"><img src="img_tbi.jpg" width="100" height="50" alt="TBI@KEC image" ></a>
